; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_block_decoder.c_pt_blk_asid.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_block_decoder.c_pt_blk_asid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_block_decoder = type { i32 }
%struct.pt_asid = type { i32 }

@pte_invalid = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pt_blk_asid(%struct.pt_block_decoder* %0, %struct.pt_asid* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.pt_block_decoder*, align 8
  %6 = alloca %struct.pt_asid*, align 8
  %7 = alloca i64, align 8
  store %struct.pt_block_decoder* %0, %struct.pt_block_decoder** %5, align 8
  store %struct.pt_asid* %1, %struct.pt_asid** %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load %struct.pt_block_decoder*, %struct.pt_block_decoder** %5, align 8
  %9 = icmp ne %struct.pt_block_decoder* %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %3
  %11 = load %struct.pt_asid*, %struct.pt_asid** %6, align 8
  %12 = icmp ne %struct.pt_asid* %11, null
  br i1 %12, label %16, label %13

13:                                               ; preds = %10, %3
  %14 = load i32, i32* @pte_invalid, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* %4, align 4
  br label %22

16:                                               ; preds = %10
  %17 = load %struct.pt_asid*, %struct.pt_asid** %6, align 8
  %18 = load %struct.pt_block_decoder*, %struct.pt_block_decoder** %5, align 8
  %19 = getelementptr inbounds %struct.pt_block_decoder, %struct.pt_block_decoder* %18, i32 0, i32 0
  %20 = load i64, i64* %7, align 8
  %21 = call i32 @pt_asid_to_user(%struct.pt_asid* %17, i32* %19, i64 %20)
  store i32 %21, i32* %4, align 4
  br label %22

22:                                               ; preds = %16, %13
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32 @pt_asid_to_user(%struct.pt_asid*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
